--- a/blog/01.md
+++ b/blog/01.md
@@ -1,5 +1,5 @@
 ---
-title: 'Appunti 11ty'
+title: 'BLOG Appunti 11ty'
 img: 'https://source.unsplash.com/1600x900/?nature,water'
 mainTag: git
 abstract: 'Lorem ipsum'
