--- a/projects/01.md
+++ b/projects/01.md
@@ -1,5 +1,5 @@
 ---
-title: 'Project 01'
+title: 'PR 01'
 date: '2020-01-23'
 tags:
   - git
@@ -8,6 +8,8 @@ tags:
 mainTag: git
 externalUrl: www.google.com
 ---
+
+P 01
 
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, expedita aut ab sapiente aliquam provident quae ullam! Nulla, eligendi reiciendis. Sint, adipisci velit architecto magni laudantium repellat commodi totam unde?
 
