--- a/usefulresources/01.md
+++ b/usefulresources/01.md
@@ -1,12 +1,13 @@
 ---
-title: 'useful res 01'
+title: 'usef 01'
 date: '2020-01-23'
 tags:
   - cat
   - dog
-mainTag: visual-studio-code
+mainTag: vsc
 ---
 
 CIAO CIAO
 
 lorem ipsum
+c
