--- a/blog/02-11ty.md
+++ b/blog/02-11ty.md
@@ -11,6 +11,7 @@ tags:
 
 https://github.com/11ty/eleventy/issues/76#issuecomment-372331202
 
+```md
 pagination:
   data: items
   size: 2
@@ -20,12 +21,19 @@ items:
   - item3
   - item4
 permalink: paged/{% if pagination.pageNumber > 0 %}page-{{ pagination.pageNumber }}/{% endif %}index.html
+```
 
 https://github.com/11ty/eleventy/issues/76#issuecomment-372528823
 
+```javascript
+console.log('hei')
+```
+
+```md
 {% for item in pagination.items %}
   {% include "item/post" %}
 {% endfor %}
+```
 
 FUNZIONANTE: https://github.com/11ty/eleventy/issues/455#issuecomment-474026138
 
