--- a/404.md
+++ b/404.md
@@ -4,9 +4,10 @@ permalink: 404.html
 title: Oops! Not Found
 quote: Not until we are lost do we begin to understand ourselves.
 quoteAuthor: Henry David Thoreau
-img: 'https://source.unsplash.com/VGOiY1gZZYg'
-imgAuthorName: '@atlas_green'
-imgAuthorProfile: 'https://unsplash.com/@atlas_green'
+# img: 'https://source.unsplash.com/VGOiY1gZZYg'
+# imgAuthorName: '@atlas_green'
+# imgAuthorProfile: 'https://unsplash.com/@atlas_green'
+paletteColor: 5
 isCustomPost: true
 ---
 
