feat: add favicons

--- a/404.md
+++ b/404.md
@@ -11,11 +11,10 @@ paletteColor: 5
 isCustomPost: true
 ---
 
-## Unfortunately there is not an url like this! 🤷🏻‍♀️
+## Unfortunately there is not any url like that! 🤷🏻‍♀️
 
-But you can go to other intresting pages instead!
+But you can go to other intresting pages instead:
 
 - 🕵🏻‍♀️go to the [search page](/search)
 - 📕go to the section [today i learned](/til)
 - 📘go to the [blog](/blog)
-- 🏡 go to the [homepage](/)
