feat: update "blog" section to "tutorials" section

--- a/404.md
+++ b/404.md
@@ -17,4 +17,4 @@ But you can go to other intresting pages instead:
 
 - 🕵🏻‍♀️go to the [search page](/search)
 - 📕go to the section [today i learned](/til)
-- 📘go to the [blog](/blog)
+- 📘go to the [tutorials](/tutorials)
