content: update 404 content

--- a/404.md
+++ b/404.md
@@ -8,10 +8,10 @@ paletteColor: 5
 isCustomPost: true
 ---
 
-## Unfortunately there is not any url like that! 🤷🏻‍♀️
+## Unfortunately the page you are looking for is not there! 🤷🏻‍♀️
 
-But you can go to other intresting pages instead:
+You can go to other intresting pages instead:
 
 - 🕵🏻‍♀️go to the [search page](/search)
-- 📕go to the [today i learned](/til) section
+- 📕go to the [today i learned](/) section
 - 📘go to the [tutorials](/tutorials) section
