content: update 404 and about page

--- a/404.md
+++ b/404.md
@@ -10,8 +10,15 @@ isCustomPost: true
 
 ## Unfortunately the page you are looking for is not there! 🤷🏻‍♀️
 
-You can go to other intresting pages instead:
+<div class="s-giphy s-giphy--small-d">
+  <video autoplay loop muted playsinline>
+    <source src="https://i.giphy.com/media/BsQAVgY6ksvIY/giphy.mp4" type="video/mp4">
+  </video>
+  <p><a href="http://gph.is/2FnreKX">via GIPHY</a></p>
+</div>
 
-- 🕵🏻‍♀️go to the [search page](/search)
+You can still go to other intresting pages instead 😏
+
+- 📗go to the [search page](/search)
 - 📕go to the [today i learned](/) section
 - 📘go to the [tutorials](/tutorials) section
