feat: update styleguide

--- a/404.md
+++ b/404.md
@@ -8,7 +8,7 @@ paletteColor: 5
 isCustomPost: true
 ---
 
-## Unfortunately the page you are looking for is not there! 🤷🏻‍♀️
+## Unfortunately the page you are looking for is not here! 🤷🏻‍♀️
 
 <div class="s-giphy s-giphy--small-d">
   <video autoplay loop muted playsinline>
