--- a/404.md
+++ b/404.md
@@ -17,7 +17,7 @@ isCustomPost: true
   <p><a href="http://gph.is/2FnreKX">via GIPHY</a></p>
 </div>
 
-You can still go to other intresting pages instead 😏
+You can still go to other intresting pages 😏
 
 - 📗go to the [search page](/search)
 - 📕go to the [today i learned](/) section
