--- a/404.md
+++ b/404.md
@@ -8,13 +8,13 @@ paletteColor: 5
 isCustomPost: true
 ---
 
-## Unfortunately the page you are looking for is not here! 🤷🏻‍♀️
+## Unfortunately the page you are looking for was eaten by this cat! 😳
 
 <div class="s-giphy s-giphy--small-d">
   <video autoplay loop muted playsinline>
-    <source src="https://i.giphy.com/media/BsQAVgY6ksvIY/giphy.mp4" type="video/mp4">
+    <source src="https://i.giphy.com/media/W5IsPd0FSeiInmtFxh/giphy.mp4" type="video/mp4">
   </video>
-  <p><a href="http://gph.is/2FnreKX">via GIPHY</a></p>
+  <p><a href="https://media.giphy.com/media/W5IsPd0FSeiInmtFxh/giphy.mp4">via GIPHY</a></p>
 </div>
 
 You can still go to other intresting pages 😏
